# stegverse-gsl

./: .gitignore  LICENSE  README.md  architecture-guard.yml  pyproject.toml  stegverse.architecture.json  stegverse.architecture.json.template-stegverse-gsl
scripts/: discover.py
